[project]
name = "wordle-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Paolo Notaro",email = "paolo.notaro@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode =  false